# FMS_dev_ws

Landing Stereo Cam dev/: colourTrial5.mj2  kinet_startup.m
Landing Stereo Cam dev/KinectMLConnect/KinectMLConnect/: KinectToMatlab.Designer.cs
Landing Stereo Cam dev/KinectMLConnect/KinectMLConnect/Properties/: Resources.resx  Settings.Designer.cs
Landing Stereo Cam dev/LibreriasKinectdeC++enMatlab/: Example.m  compile_cpp_files.m
Landing Stereo Cam dev/LibreriasKinectdeC++enMatlab/Mex/: mxMSAudioClose.cpp  mxMSAudioClose.m  mxMSAudioRecord.cpp  mxMSAudioRecord.m  mxMSAudioStart.m  mxMSCreateContext.m  mxMSDeleteContext.cpp  mxMSDeleteContext.m  mxMSDepth.m  mxMSPhoto.cpp  mxMSPhoto.m  mxMSSkeleton.cpp
dev/Landing Stereo Cam dev/: DepthToXYZ.m  Kinect_record.m  Landing_box_cost.m
dev/Landing Stereo Cam dev/KinectMLConnect/: KinectMLConnect.sln
dev/Landing Stereo Cam dev/KinectMLConnect/KinectMLConnect/: KinectMLConnect.csproj  KinectToMatlab.cs  MATWriter.cs  Program.cs
dev/Landing Stereo Cam dev/KinectMLConnect/KinectMLConnect/Properties/: AssemblyInfo.cs  Resources.Designer.cs
dev/Landing Stereo Cam dev/LibreriasKinectdeC++enMatlab/: ExampleMicrophone.m  ExampleSkeleton.m
dev/Landing Stereo Cam dev/LibreriasKinectdeC++enMatlab/Mex/: mxMSAudioStart.cpp  mxMSCreateContext.cpp  mxMSDepth.cpp  mxMSSkeleton.m
src/fms/: CMakeLists.txt  package.xml
src/fms/src/: fms_kernel.cpp  fms_mavrx.cpp  fms_mavtx.cpp  mavlink_bridge_header.h
src/test/: CMakeLists.txt  package.xml
src/test/msg/: Mess.msg
src/test/src/: listener.cpp  talker.cpp
